# Isaac-Sim

./: pc.txt
cadtousda/dxf/: demo.dxf  jskjy.dxf  jskjy_1018.dxf  jskjy_1019.dxf  jskjy_1020.dxf  room.dxf
cadtousda/py/: cad2usda.py  config.json  dxf_jskjy.py  dxf_room.py  get_id.py  start_isaac.py  usd_room.py
cadtousda/py/test/: axis.py  create_usd.py  demo.py  dxf.py  js20230913.py  layer.py  lines.py  (+4 more)
cadtousda/usda/: EMMA400.usda  EMMA400_RF.usda  demo.usda  demo_wall.usda  jskjy_1018.usda  jskjy_1019.usda  jskjy_1020.usda  room.usda
formal/: AMR_12w.usd  EMMA1000_JS.usd  EMMA400.usd  EMMA400_CE.usd  EMMA400_JS.usd  EMMA400_LIFT.usd  EMMA400_RF.usd  FOLA2001_JS.usd  FOLA2001_body_JS.usd  amr-dw-js.usd  amr-scxw.usd  lh_AMR.usd  multi-car.usd
test/: amr-digital-twin.usd  amr-dw-hx.usd  amr-scxw-hx.usd  hx-map.usd  lh_AMR.usd  lh_jingsheng .usd  lh_ur.usd
test/Carter/: lh_carter_urdf.usd
test/Forklift/: fork_body_JS.usd  forklift.usd  forklift.usda  lh_steer.usd
test/Franka/: franka_torque.usd  lh_franka.usd
test/Turtlebot3/: lh_turtlebot3.usd  turtlebot3_test.usd
urdf/EMMA1000_body/: CMakeLists.txt  package.xml
urdf/EMMA400K_body/: CMakeLists.txt  package.xml
urdf/EMMA400K_body/launch/: display.launch  gazebo.launch
urdf/EMMA400K_body/urdf/: EMMA400K_body.csv  EMMA400K_body.urdf
urdf/FOLA-BN2001-RBS/: CMakeLists.txt  package.xml
urdf/FOLA-BN2001-RBS-body/: CMakeLists.txt  package.xml
urdf/FOLA-BN2001-RBS-body/launch/: display.launch  gazebo.launch
urdf/FOLA-BN2001-RBS-body/urdf/: FOLA-BN2001-RBS-body.csv  FOLA-BN2001-RBS-body.urdf
(+8 files in other folders)
